--- a/IceCreamShopCustomerMenu_GUI.fxml
+++ b/IceCreamShopCustomerMenu_GUI.fxml
@@ -11,8 +11,22 @@
   <children>
     <Button fx:id="btn_exit1" layoutX="407.0" layoutY="452.0" mnemonicParsing="false" text="Exit">
       <font>
-        <Font name="Times New Roman Bold" size="24.0" />
+        <Font name="Times New Roman Bold" size="24.0" fx:id="x2" />
       </font>
     </Button>
+    <Label layoutX="146.0" layoutY="39.0" text="CUSTOMER">
+      <font>
+        <Font name="Times New Roman Bold" size="36.0" />
+      </font>
+    </Label>
+    <TextField layoutX="46.0" layoutY="175.0" prefWidth="200.0" />
+    <TextField layoutX="50.0" layoutY="239.0" prefWidth="200.0" />
+    <Label layoutX="262.0" layoutY="242.0" text="Last Name">
+      <font>
+        <Font name="Times New Roman" size="12.0" fx:id="x1" />
+      </font>
+    </Label>
+    <Label font="$x1" layoutX="262.0" layoutY="181.0" text="First Name" />
+    <Button font="$x2" layoutX="269.0" layoutY="452.0" mnemonicParsing="false" text="Confirm" />
   </children>
 </AnchorPane>
