--- a/Employee.fxml
+++ b/Employee.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
@@ -25,5 +26,20 @@
     <TextField fx:id="textFieldId" layoutX="102.0" layoutY="158.0" onAction="#handle" promptText="ID" text="" />
     <TextField fx:id="textFieldPass" layoutX="329.0" layoutY="158.0" onAction="#handle" promptText="Password" text="" />
     <Button fx:id="continueBtn" layoutX="271.0" layoutY="259.0" mnemonicParsing="false" onAction="#handle" text="Continue" />
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="31.0" layoutY="217.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+        <Image url="@Images/Yogurt2.jpeg" />
+      </image>
+    </ImageView>
+    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="432.0" layoutY="218.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+        <Image url="@Images/IceCream4.jpeg" />
+      </image>
+    </ImageView>
+    <ImageView fitHeight="113.0" fitWidth="150.66666666666666" layoutX="444.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+        <Image url="@Images/Yogurt3.jpeg" />
+      </image>
+    </ImageView>
   </children>
 </AnchorPane>
