--- a/Customer.fxml
+++ b/Customer.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import java.net.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.text.*?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="groupIceCream.CustomerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="pane" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="groupIceCream.CustomerController">
   <children>
     <Label layoutX="166.0" layoutY="112.0" />
     <Label fx:id="newOrderLabel" layoutX="219.0" layoutY="45.0" text="START NEW ORDER">
@@ -44,4 +45,7 @@
       </image>
     </ImageView>
   </children>
+  <stylesheets>
+    <URL value="@JavaFx.css" />
+  </stylesheets>
 </AnchorPane>
