--- a/EmployeeMenu.fxml
+++ b/EmployeeMenu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import java.net.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,16 +9,19 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="pane" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
     <Label layoutX="251.0" layoutY="52.0" text="Employee Menu" />
     <Button layoutX="63.0" layoutY="130.0" mnemonicParsing="false" text="Excel File for the Day" />
     <Button layoutX="63.0" layoutY="200.0" mnemonicParsing="false" text="Excel File for the Week" />
     <Button layoutX="63.0" layoutY="272.0" mnemonicParsing="false" text="Excel File for the Month" />
-    <ImageView fitHeight="179.0" fitWidth="319.6428715056437" layoutX="239.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fitHeight="144.83999953408693" fitWidth="258.6428527832031" layoutX="300.0" layoutY="130.0" pickOnBounds="true" preserveRatio="true">
       <image>
         <Image url="@Images/Excel.png" />
       </image>
     </ImageView>
   </children>
+  <stylesheets>
+    <URL value="@JavaFx.css" />
+  </stylesheets>
 </AnchorPane>
