--- a/IceCreamStartUp.fxml
+++ b/IceCreamStartUp.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import java.net.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.text.*?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="369.0" prefWidth="586.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="groupIceCream.IceCreamController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="369.0" prefWidth="586.0" styleClass="pane" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="groupIceCream.IceCreamController">
   <children>
     <Label layoutX="176.0" layoutY="41.0" prefHeight="42.0" prefWidth="253.0" text="Welcome to the Icecream Shop" textAlignment="RIGHT">
       <effect>
@@ -39,4 +40,7 @@
       </image>
     </ImageView>
   </children>
+  <stylesheets>
+    <URL value="@JavaFx.css" />
+  </stylesheets>
 </AnchorPane>
